<resources>
    <string name="app_name">TUBES1</string>
    <string name="your_diary">Your Diary</string>
    <string name="judul">Judul</string>
    <string name="masukkan_judul_diary">Masukkan judul diary</string>
    <string name="title">Title</string>
    <string name="enter_the_title_of_the_diary">Enter the title of the diary (Max 18 char)</string>
    <string name="story">Story</string>
    <string name="picture">Picture</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="photo_diary_app">Photo Diary App</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="dark_mode">Dark Mode</string>
</resources>