<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12sp">
        <TextView
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:clickable="true"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/txt_editDiary"
        android:layout_width="0sp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="Edit your diary"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="12sp"/>
    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:backgroundTint="@color/biru"
        android:text="Update"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/save_button_baseline"
        android:drawableTint="@color/white"
        />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title">
    </TextView>

    <EditText
        android:id="@+id/new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new Title or leave blank"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/story">
    </TextView>

    <EditText
        android:id="@+id/new_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:hint="Write new Diary Story or leave blank"/>
</LinearLayout>